--- a/Ausgaben/Tinnitus/Vorwort.tex
+++ b/Ausgaben/Tinnitus/Vorwort.tex
@@ -4,26 +4,24 @@
 Willich, \today
 \end{flushright}
 
-Liebe Pfadfinder,
+Liebe Pfadfinder,\\
 
-"Es soll wieder mehr gesungen werden!", hieß es in veschiedenen Leiterrunden und Vorstandstreffen. 
-Doch wie singen ohne ein Liederbuch? 
-Es musste also ein neues Liederbuch her, am besten ein eigenes mit vielen Liedern und durchgehenden Akkorden.
-Nach einigen Verzögerungen, ahben wir es aber nun doch geschafft ein Buch für euch zusammenzustellen und 
-wir sind stolz es euch nun vorlegen zu können.
+\glqq Es soll wieder mehr gesungen werden!", hieß es in veschiedenen Leiterrunden und Vorstandstreffen. 
+Doch ohne ein Liederbuch war dies schwer umzusetzen. 
+Es brauchte also ein neues Liederbuch, am besten ein eigenes mit vielen Liedern und durchgehenden Akkorden.
+Nach einigen Verzögerungen haben wir es dann auch geschafft, ein Buch für euch zusammenzustellen und 
+wir sind stolz es euch nun vorlegen zu können.\\
 
 Ganz besonders möchten wir uns aber noch bei der Region Kurhessen im Verband Christlicher Pfadfinderinnen und Pfadfinder bedanken.
-Ohne die immense Vorarbeit des erstellens einer frei verfügbaren \latex Vorlage und dem einpflegen mehrerer hundert Lieder 
-hätten wir dieses Buch nicht in so kurzer Zeit erstellen können.
+Ohne die immense Vorarbeit des Erstellens einer frei verfügbaren \LaTeX-Vorlage und dem Einpflegen mehrerer hundert Lieder 
+hätten wir dieses Buch nicht in so kurzer Zeit erstellen können.\\
 
-Bedanken möchten wir uns außerdem beim Stamm Oedt der DPSG, bei denen wir uns stark von der Lilederauswahl haben beeinflussen lassen.
+Bedanken möchten wir uns außerdem beim Stamm Oedt der DPSG. Die Auswahl der Lieder in ihrem Liederbuch hat unsere stark beeinflusst.
 
-Zusätzlich danken wir Anna für das Erstellen des Einbandes.
+Zusätzlich danken wir Anna für das Erstellen des Einbandes.\\
 
-Nun aber viel Spaß beim Singen!
+Nun aber viel Spaß beim Singen!\\
 
-Gut Pfad!
+Gut Pfad!\\
 
-David und Nils
-
-Imagine hier mega das gute Vorwort.
+David und Nils\\
