--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -19,6 +19,9 @@
     \nothumb
     \markboth{}{}
     \songchapter{Christliches}
+    \vspace{40pt}
+    \center
+    \includegraphics[width=0.7\textwidth]{Bilder/Solid-Rustic-Cross.png}
     \newpage\null
 \end{intersong}
 
