--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -48,6 +48,10 @@
     \nothumb
     \markboth{}{}
     \songchapter{Deutsche Lieder}
+    \vspace{40pt}
+    \center
+    \includegraphics[width=\textwidth]{Bilder/DeutscheLieder.png}
+    \newpage
 \end{intersong}
 
 \setthumb{\#}{0}
@@ -169,6 +173,9 @@
     \nothumb
     \markboth{}{}
     \songchapter{Englische Lieder}
+    \vspace{40pt}
+    \center
+    \includegraphics[width=0.7\textwidth]{Bilder/EnglischeLieder.png}
     \newpage\null
 \end{intersong}
 
