--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -48,10 +48,10 @@
     \nothumb
     \markboth{}{}
     \songchapter{Deutsche Lieder}
-    \vspace{40pt}
+    \vspace{120pt}
     \center
     \includegraphics[width=\textwidth]{Bilder/DeutscheLieder.png}
-    \newpage
+    \newpage\null
 \end{intersong}
 
 \setthumb{\#}{0}
@@ -173,9 +173,9 @@
     \nothumb
     \markboth{}{}
     \songchapter{Englische Lieder}
-    \vspace{40pt}
+    \vspace{120pt}
     \center
-    \includegraphics[width=0.7\textwidth]{Bilder/EnglischeLieder.png}
+    \includegraphics[width=\textwidth]{Bilder/EnglischeLieder.png}
     \newpage\null
 \end{intersong}
 
