--- a/Ausgaben/Tinnitus.tex
+++ b/Ausgaben/Tinnitus.tex
@@ -231,6 +231,9 @@
     \newpage
     \markboth{}{}
     \songchapter{Anhang}
+    \vspace{40pt}
+    \center
+    \includegraphics[height=0.8\textheight]{Bilder/Anhang.png}
     \newpage\null
 \end{intersong}
 
