make it work again

--- a/Ausgaben/Mittelohrentzuendung.tex
+++ b/Ausgaben/Mittelohrentzuendung.tex
@@ -66,7 +66,7 @@
 %\input{Lieder/SchließAugUndOhr} % Missing
 %\input{Lieder/BeiDuisburg} % Missing
 \input{Lieder/Edelweisspiraten}
-%\input{Lieder/AnRheinUndRuhr} % Missing
+\input{Lieder/AnRheinUndRuhr} % Missing
 %\input{Lieder/WayfaringStranger} % Missing
 %\input{Lieder/DasLilienbanner} % Missing
 \input{Lieder/AmWestermanns}
@@ -78,7 +78,7 @@
 \input{Lieder/Maenner}
 %\input{Lieder/WirLagenVor} % Missing
 \input{Lieder/WennderAbendnaht}
-%\input{Lieder/Karrieresong} % Missing
+\input{Lieder/Karrieresong} 
 \input{Lieder/RheinischeVandalen}
 \input{Lieder/VoranUndDraufUndDran}
 \input{Lieder/WirScheissenAufKarriere}
