--- a/Misc/basic.tex
+++ b/Misc/basic.tex
@@ -1,6 +1,7 @@
 % Songs Latex Package
 \usepackage{hyperref}
-\usepackage[chorded, noshading]{Misc/songs}
+%\usepackage[chorded, noshading]{Misc/songs}
+\usepackage[chorded, noshading]{songs}
 
 \usepackage{ifthen}
 
@@ -14,13 +15,13 @@
 \getenv[\PICS]{PICS}
 
 % Hotfix for newer LaTeX versions: https://tex.stackexchange.com/questions/650106/recent-update-broke-songs-package
-\makeatletter
-\renewcommand\SB@obeylines{%
-  \let\obeyedline\SB@par%
-  \obeylines%
-  \let\@par\SB@@par%
-}
-\makeatother
+%\makeatletter
+%\renewcommand\SB@obeylines{%
+%  \let\obeyedline\SB@par%
+%  \obeylines%
+%  \let\@par\SB@@par%
+%}
+%\makeatother
 
 % Keine Bilder einfügen, wenn ein draft erzeugt wird.
 \if1\PICS
