--- a/Ausgaben/Mittelohrentzuendung.tex
+++ b/Ausgaben/Mittelohrentzuendung.tex
@@ -30,13 +30,13 @@
 
 
 \input{Lieder/SchreinachLiebe}
-%\input{Lieder/LiedVomKnueppelchen} % Missing
+\input{Lieder/LiedVomKnueppelchen} % Missing
 %\input{Lieder/GeborenWeilDuLebst} % Missing
 %\input{Lieder/Freunde} % Missing
 \input{Lieder/SantianoPop}
 \input{Lieder/Hurt}
 %\input{Lieder/LittleLionMan} % Missing
-%\input{Lieder/TrotzAlledem} % Missing
+\input{Lieder/TrotzAlledem} % Missing
 \input{Lieder/EsistanderZeit}
 %\input{Lieder/SeiWachsam} % Missing
 \input{Lieder/KnockinonHeavensDoor}
@@ -63,20 +63,19 @@
 %\input{Lieder/Bochum} % Missing
 %\input{Lieder/LinksradikalerSchlager} % Missing
 %\input{Lieder/VivaLaVida} % Missing
-%\input{Lieder/SchließAugUndOhr} % Missing
+%\input{Lieder/SchließAugUndOhr} % Missing % BulibuII S. 219, Liederbock blau S. 274, Tonspur S. 450
 %\input{Lieder/BeiDuisburg} % Missing
 \input{Lieder/Edelweisspiraten}
 \input{Lieder/AnRheinUndRuhr} % Missing
 %\input{Lieder/WayfaringStranger} % Missing
-%\input{Lieder/DasLilienbanner} % Missing
+%\input{Lieder/DasLilienbanner} % Missing %Bulibu S.13
 \input{Lieder/AmWestermanns}
-%\input{Lieder/Tscherkessenlied} % Missing
-%\input{Lieder/DasLilienbanner} % Missing
+%\input{Lieder/Tscherkessenlied} % Missing %Jurtenburg S.67, Tonspur S. 218
 \input{Lieder/Dontlookbackinanger}
 \input{Lieder/Zombie}
 \input{Lieder/HeyJude}
 \input{Lieder/Maenner}
-%\input{Lieder/WirLagenVor} % Missing
+%\input{Lieder/WirLagenVor} % Missing %Jurtenburg S.277
 \input{Lieder/WennderAbendnaht}
 \input{Lieder/Karrieresong} 
 \input{Lieder/RheinischeVandalen}
@@ -86,7 +85,7 @@
 %\input{Lieder/CropperLads} % Missing
 %\input{Lieder/TimeToBeSleeping} % Missing
 %\input{Lieder/PfadfinderVomKernigenSchliff} % Missing
-%\input{Lieder/HoheTannen} % Missing
+%\input{Lieder/HoheTannen} % Missing % Codex S.98
 %\input{Lieder/WiederHier} % Missing
 \input{Lieder/Schilf}
 %\input{Lieder/WelcomeToTheInternet} % Missing
