--- a/Lieder/TimeToBeSleeping.tex
+++ b/Lieder/TimeToBeSleeping.tex
@@ -55,3 +55,14 @@ Don\[Am]'t cry in your \[G]sleep bonny \[Am]baby
 
 
 \endsong
+
+\beginscripture
+"Smile In Your Sleep", manchmal auch als "Hush, Hush, Time To Be Sleeping" (schottisch: "Hush, Hush, Time Tae Be Sleepin") bekannt,
+ist ein schottisches Volkslied und Klagelied, das von Jim McLean geschrieben und auf die Melodie des gälischen Liedes
+"Chi Mi Na Mòrbheanna" (wörtlich "Ich werde die großen Berge sehen" oder "The Mist Covered Mountain") gesetzt wurde.
+Es handelt von den Erfahrungen der Crofters während der Highland Clearances mit Vertreibung und Auswanderung.
+"Chi Mi Na Mòrbheanna" (im Englischen gemeinhin bekannt als "The Mist Covered Mountains of Home")
+ist ein schottisch-gälisches Lied, das 1856 von dem aus Ballachulish stammenden Highlander John Cameron (Iain Camshroin) geschrieben wurde,
+der im Gälischen als Iain Rob und Iain Òg Ruaidh bekannt war. 
+\endscripture
+
