--- a/Lieder/VoranUndDraufUndDran.tex
+++ b/Lieder/VoranUndDraufUndDran.tex
@@ -30,7 +30,7 @@ woll'n wir dich lieber ^lassen ^stahn.
 
 \beginverse
 ^Hau ab, du alter Sack, 
-geh' heim und ^lasse uns allein.
+geh' heim und ^lasse uns all^ein.
 ^Wir brauchen dich 
 ^ganz sicher nicht, 
 auch ohne dich ^geht's fürchter^lich
