--- a/Ausgaben/Mittelohrentzuendung.tex
+++ b/Ausgaben/Mittelohrentzuendung.tex
@@ -21,9 +21,9 @@
 	\showindex[2]{Inhaltsverzeichnis}{Seitenzahlen}
 
     \setthumb{A}{1}
-    \input{Lieder/AmericanPie} % Missing
+    \input{Lieder/AmericanPie}
     \input{Lieder/AmWestermanns}
-    \input{Lieder/AnRheinUndRuhr} % Missing
+    \input{Lieder/AnRheinUndRuhr}
 
     \setthumb{B}{2}
     %\input{Lieder/BeiDir} % Missing
@@ -36,7 +36,7 @@
     %\input{Lieder/CropperLads} % Missing
 
     \setthumb{D}{4}
-    %\input{Lieder/DasLilienbanner} % Missing %Bulibu S.13
+    \input{Lieder/DasLilienbanner} %Bulibu S.13
     \input{Lieder/DeineSchuld}
     \input{Lieder/Dontlookbackinanger}
     \input{Lieder/DreirotePfiffe}
@@ -56,7 +56,7 @@
     \setthumb{H}{8}
     \input{Lieder/HeyJude}
     %\input{Lieder/HeySoulSister} % Missing
-    %\input{Lieder/HoheTannen} % Missing % Codex S.98
+    \input{Lieder/HoheTannen} % Codex S.98
     \input{Lieder/Hurt}
 
     \setthumb{I}{9}
@@ -72,7 +72,7 @@
 
     \setthumb{L}{12}
     %\input{Lieder/LichtAn} % Missing
-    \input{Lieder/LiedVomKnueppelchen} % Missing
+    \input{Lieder/LiedVomKnueppelchen}
     %\input{Lieder/LinksradikalerSchlager} % Missing
     %\input{Lieder/LittleLionMan} % Missing
 
@@ -87,7 +87,7 @@
     %\setthumb{P}{16}
     %\input{Lieder/Petsamo} % Missing
     %\input{Lieder/PfadfinderVomKernigenSchliff} % Missing
-    %\input{Lieder/Pochahontas} % Missing
+    \input{Lieder/Pocahontas}
 
     %\setthumb{Q}{17}
     \setthumb{R}{18}
@@ -104,9 +104,9 @@
     %\input{Lieder/Susanne} % Missing
 
     \setthumb{T}{20}
-    \input{Lieder/TimeToBeSleeping} % Missing
-	\input{Lieder/TrotzAlledem} % Missing
-    \input{Lieder/Tscherkessenlied} % Missing %Jurtenburg S.67, Tonspur S. 218
+    \input{Lieder/TimeToBeSleeping}
+	\input{Lieder/TrotzAlledem}
+    \input{Lieder/Tscherkessenlied} %Jurtenburg S.67, Tonspur S. 218
 
     %\setthumb{U}{21}
     \setthumb{V}{22}
@@ -114,12 +114,12 @@
     \input{Lieder/VoranUndDraufUndDran}
 
     \setthumb{W}{23}
-    %\input{Lieder/WavingFlag} % Missing
-    \input{Lieder/WayfaringStranger} % Missing
-    \input{Lieder/WelcomeToTheInternet} % Missing
+    \input{Lieder/WavingFlag}
+    \input{Lieder/WayfaringStranger}
+    \input{Lieder/WelcomeToTheInternet}
     \input{Lieder/WennderAbendnaht}
-    %\input{Lieder/WiederHier} % Missing
-    %\input{Lieder/WirLagenVor} % Missing %Jurtenburg S.277
+    \input{Lieder/WiederHier}
+    \input{Lieder/WirLagenVor} %Jurtenburg S.277
     \input{Lieder/WirScheissenAufKarriere}
     \input{Lieder/WosnurFelsengibt}
 
