--- a/Lieder/AnRheinUndRuhr.tex
+++ b/Lieder/AnRheinUndRuhr.tex
@@ -4,8 +4,7 @@
 ]
 
 \beginverse
-{\nolyrics Intro:  }
-{\nolyrics \lrep \[Em] \[D] \rrep \rep{4}}
+{\nolyrics Intro: \[Em] \[D] \rep{4}}
 \endverse
 
 \newchords{rheinruhrchords}
@@ -45,7 +44,7 @@ denn un\[Em]sere Edelw\[C]eißpiraten
 An ^Rhein und ^Ruhr marsch^ieren ^wir,
 für ^Räte-Deu^tschland k^ämpfen^ wir,
 die R^eakti^on, schlagt s^ie entz^wei,
-\lrep Rot^-Front mar^schiert, Achtung ^Straße^ frei \rrep
+Rot^-Front mar^schiert, Achtung ^Straße^ frei \rep{2}
 \endverse
  
 \printchorus
