--- a/Lieder/RheinischeVandalen.tex
+++ b/Lieder/RheinischeVandalen.tex
@@ -1,5 +1,5 @@
 \beginsong{Rheinische Vandalen}[
-    wuw={Edelweißpiraten}, 
+    wuw={Werner Helwig}, 
     jahr={1930?}, 
 ]
 
@@ -43,6 +43,13 @@ begrüßen ihn mit Fluchen ^dann.
 \printchorus
 
 \endsong
+
+\beginscripture{}
+Werner Helwig schreibt über dieses Lied: "Heimlich trafen sich diese Gruppen auf der Burg Liebenstein, denn auf der Waldeck, der Stammburg der Nerother, war das bereits ein
+Unterfangen mit tödlichen Gefahren, das auch bereits seine Opfer gekostet hatte, da sie von Nazispitzeln bewacht wurden. Bei diesen Zusammenkünften entlastete man sich von dem ungeheuren politischen Druck [...]
+durch wüstes Singen von Brechtliedern. Durch Persiflagen nazistischer Gepflogenheiten. Durch wilde, in der Mitternachtsstille herausgebrüllte Herausforderungen. Denn in den Kreisen der Kameraden, die nicht
+in die Tarnung schlüpfen konnten, folgte eine Verfolgungswelle der anderen. Meist auf Nimmerwiedersehen. Hier wurde nun mit besonderem Genuß gesungen: Wir sind die rheinischen Vandalen ..."
+\endscripture
 
 
 
