--- a/Lieder/TimeToBeSleeping.tex
+++ b/Lieder/TimeToBeSleeping.tex
@@ -56,7 +56,7 @@ Don\[Am]'t cry in your \[G]sleep bonny \[Am]baby
 
 \endsong
 
-\beginscripture
+\beginscripture{}
 "Smile In Your Sleep", manchmal auch als "Hush, Hush, Time To Be Sleeping" (schottisch: "Hush, Hush, Time Tae Be Sleepin") bekannt,
 ist ein schottisches Volkslied und Klagelied, das von Jim McLean geschrieben und auf die Melodie des gälischen Liedes
 "Chi Mi Na Mòrbheanna" (wörtlich "Ich werde die großen Berge sehen" oder "The Mist Covered Mountain") gesetzt wurde.
