--- a/Lieder/VoranUndDraufUndDran.tex
+++ b/Lieder/VoranUndDraufUndDran.tex
@@ -1,6 +1,6 @@
 \beginsong{Voran und drauf und dran}[
-    wuw={Edelweißpiraten}, 
-    jahr={1930?}, 
+    wuw={Werner Helwig}, 
+    jahr={1929}, 
 ]
 
 \beginverse
@@ -38,3 +38,10 @@ auch ohne dich ^geht's fürchter^lich
 
 
 \endsong
+
+\beginscripture{}
+Helwig schrieb dieses Lied auf der Burg Waldeck. Mit äußerst begrenzten Mitteln versuchte eine Gruppe von Jugendlichen und Erwachsenen dort eine Jugendburg zu errichten.
+Die empfundene Aufbruchsstimmung, der verwegene Plan und die freiheitliche Lebensauffassung spiegeln sich im Liedtext wieder. 
+Trotz, Rebellion und die eigene Abgrenzung gegenüber der Spießerwelt werden hier aufs Kühnste gefeiert. 
+Die Anfangszeile könnte an das Lied "Wir sind des Geyers schwarzer Haufen" angelehnt sein.
+\endscripture
