--- a/Lieder/WirLagenVor.tex
+++ b/Lieder/WirLagenVor.tex
@@ -33,3 +33,11 @@ Die Pest gab ihm das Letzte, und w\[G]ir ihm ein S\[G7]eemannsg\[C]rab.
 \printchorus
 
 \endsong
+
+\beginscripture{}
+
+Es gibt keine Aufzeichnung von „Wir lagen vor Madagaskar“ vor 1933, es steht in keinem der in Frage kommenden Liederbücher. Daher ist zu vermuten, dass das Lied erst zur Zeit des Nationalsozialismus entstand. Es nimmt zwar Bezug auf Ereignisse von 1905, dies jedoch höchstwahrscheinlich ausgelöst durch ein Buch, das 1936 erscheint, diese Ereignisse zum Thema hat und ein Riesenerfolg wird:  „Tsushima“ von Frank Thiess.
+
+Der Roman schildert Ereignisse während des Russisch-Japanischen Krieges (1904/1905), als das “Zweite russische Pazifikgeschwader“ unter Admiral Roschestwenski wegen dringender Reparaturen vor der Nord-West-Küste von Madagaskar ankern musste. Viele russische Soldaten starben in dem tropischen Klima an Typhus, woran  ein Denkmal in Hell Ville auf  Nosy Be (Insel vor Madagaskar) erinnert.
+
+\endscripture
