--- a/Lieder/WosnurFelsengibt.tex
+++ b/Lieder/WosnurFelsengibt.tex
@@ -29,5 +29,10 @@ Wir schlafen tags und durch\[Dm]reiten die Nächte,
 \endsong
 
 \beginscripture{}
+
+Dieses Lied ist ein typisches Beispiel für die Vielzahl russophiler Lieder, die in der bündischen Jugend sehr beliebt waren.
+Die Tatsache, dass dieses Lied im Lagerliederbuch des KZ Sachsenhausen auftaucht,
+belegt zum einen, dass dort Bündische inhaftiert waren, und ist zum anderen Hinweis auf deren kulturelle Aktivität während ihrer Gefangenschaft.
+
 Der Kasbek ist der drittgrößte Berg Georgiens. Er liegt zwischen dem Schwarzen Meer und dem Kaspischen Meer. Wörtlich bedeutet Kasbek 'Eisgipfel'. 
 \endscripture
