--- a/Ausgaben/Mittelohrentzuendung.tex
+++ b/Ausgaben/Mittelohrentzuendung.tex
@@ -27,7 +27,7 @@
 
     \setthumb{B}{2}
     %\input{Lieder/BeiDir} % Missing
-    %\input{Lieder/BeiDuisburg} % Missing
+    \input{Lieder/BeiDuisburg} % Missing
     %\input{Lieder/BigMe} % Missing
     \input{Lieder/Bochum} % Missing
     %\input{Lieder/Bullenwagen} % Missing
@@ -45,12 +45,12 @@
     \input{Lieder/EsistanderZeit}
     \input{Lieder/Edelweisspiraten}
 
-    %\setthumb{F}{6}
-    %\input{Lieder/Freunde} % Missing
+    \setthumb{F}{6}
+    \input{Lieder/Freunde} % Missing
 
     \setthumb{G}{7}
-    %\input{Lieder/GeborenWeilDuLebst} % Missing
-    %\input{Lieder/GrausigBraustEs} % Missing
+    \input{Lieder/GeborenWeilDuLebst} % Missing
+    \input{Lieder/GrausigBraustEs} % Missing
     \input{Lieder/GuteNachtFreunde}
 
     \setthumb{H}{8}
@@ -67,7 +67,7 @@
 
     \setthumb{K}{11}
     \input{Lieder/Karrieresong}
-    %\input{Lieder/KeinLiebeslied} % Missing
+    \input{Lieder/KeinLiebeslied} % Missing
     \input{Lieder/KnockinonHeavensDoor}
 
     \setthumb{L}{12}
@@ -86,7 +86,7 @@
     %\setthumb{O}{15}
     %\setthumb{P}{16}
     %\input{Lieder/Petsamo} % Missing
-    %\input{Lieder/PfadfinderVomKernigenSchliff} % Missing
+    \input{Lieder/PfadfinderVomKernigenSchliff} % Missing
     \input{Lieder/Pocahontas}
 
     %\setthumb{Q}{17}
@@ -98,14 +98,15 @@
     \input{Lieder/SantianoPop}
 	\input{Lieder/SchreinachLiebe}
     \input{Lieder/Schilf}
-    %\input{Lieder/SchließAugUndOhr} % Missing % BulibuII S. 219, Liederbock blau S. 274, Tonspur S. 450
-    %\input{Lieder/SeiWachsam} % Missing
+    \input{Lieder/SchliessAugUndOhr} % Missing % BulibuII S. 219, Liederbock blau S. 274, Tonspur S. 450
+    \input{Lieder/SeiWachsam} % Missing
     %\input{Lieder/StadtMitK} % Missing
-    %\input{Lieder/Susanne} % Missing
+    \input{Lieder/Susanna} % Missing
 
     \setthumb{T}{20}
     \input{Lieder/TimeToBeSleeping}
 	\input{Lieder/TrotzAlledem}
+    \input{Lieder/TheMansTooStrong}
     \input{Lieder/Tscherkessenlied} %Jurtenburg S.67, Tonspur S. 218
 
     %\setthumb{U}{21}
