--- a/Ausgaben/Mittelohrentzuendung.tex
+++ b/Ausgaben/Mittelohrentzuendung.tex
@@ -28,6 +28,7 @@
     \setthumb{B}{2}
     %\input{Lieder/BeiDir} % Missing
     \input{Lieder/BeiDuisburg} % Missing
+    \input{Lieder/BigIron} % Missing
     %\input{Lieder/BigMe} % Missing
     \input{Lieder/Bochum} % Missing
     %\input{Lieder/Bullenwagen} % Missing
@@ -56,11 +57,15 @@
     \setthumb{H}{8}
     \input{Lieder/HeyJude}
     %\input{Lieder/HeySoulSister} % Missing
+    \input{Lieder/HierkommtAlex} 
+    \input{Lieder/HitTheRoadJack} 
+    \input{Lieder/HotelCalifornia} 
     \input{Lieder/HoheTannen} % Codex S.98
     \input{Lieder/Hurt}
 
     \setthumb{I}{9}
     \input{Lieder/ISeeFire}
+    %\input{Lieder/IchWarNochNiemals}
 
     \setthumb{J}{10}
     \input{Lieder/Jolene} 
@@ -71,7 +76,7 @@
     \input{Lieder/KnockinonHeavensDoor}
 
     \setthumb{L}{12}
-    %\input{Lieder/LichtAn} % Missing
+    \input{Lieder/LichtAn} % Missing
     \input{Lieder/LiedVomKnueppelchen}
     %\input{Lieder/LinksradikalerSchlager} % Missing
     %\input{Lieder/LittleLionMan} % Missing
@@ -91,6 +96,7 @@
 
     %\setthumb{Q}{17}
     \setthumb{R}{18}
+    %\input{Lieder/Rawhide}
     \input{Lieder/RheinischeVandalen}
 
     \setthumb{S}{19}
@@ -98,6 +104,7 @@
     \input{Lieder/SantianoPop}
 	\input{Lieder/SchreinachLiebe}
     \input{Lieder/Schilf}
+    %\input{Lieder/Schlaflied}
     \input{Lieder/SchliessAugUndOhr} % Missing % BulibuII S. 219, Liederbock blau S. 274, Tonspur S. 450
     \input{Lieder/SeiWachsam} % Missing
     %\input{Lieder/StadtMitK} % Missing
@@ -112,6 +119,7 @@
     %\setthumb{U}{21}
     \setthumb{V}{22}
     %\input{Lieder/VivaLaVida} % Missing
+    %\input{Lieder/VielZuSelten} % Missing
     \input{Lieder/VoranUndDraufUndDran}
 
     \setthumb{W}{23}
