--- a/Ausgaben/Mittelohrentzuendung.tex
+++ b/Ausgaben/Mittelohrentzuendung.tex
@@ -96,7 +96,7 @@
 
     %\setthumb{Q}{17}
     \setthumb{R}{18}
-    %\input{Lieder/Rawhide}
+    \input{Lieder/Rawhide}
     \input{Lieder/RheinischeVandalen}
 
     \setthumb{S}{19}
@@ -119,7 +119,7 @@
     %\setthumb{U}{21}
     \setthumb{V}{22}
     %\input{Lieder/VivaLaVida} % Missing
-    %\input{Lieder/VielZuSelten} % Missing
+    \input{Lieder/VielZuSelten} % Missing
     \input{Lieder/VoranUndDraufUndDran}
 
     \setthumb{W}{23}
